# WeatherApp

./: .gitignore  Dockerfile  compose.yaml  docker-compose.yaml  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/weatherapp/: models.py  serializers.py  urls.py  views.py
backend/weatherproject/: settings.py  urls.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.css
frontend/src/assets/: base.css  main.css
frontend/src/components/: PageFooter.vue  WeatherAdditionalData.vue
frontend/src/components/icons/: IconCloudy.vue  IconNotFound.vue
frontend/src/components/icons/weather/: IconClearDay.vue  IconClearNight.vue  IconCloudy.vue  IconDrizzle.vue  IconFewCloudsDay.vue  IconFewCloudsRainDay.vue  IconFewCloudsRainNight.vue  IconParttialyCloudyNight.vue  IconRain.vue  IconSnow.vue  IconThunderStorm.vue  IconWind.vue
frontend/src/utils/: weatherIcons.js  weatherIcons.vue
frontend/weatherapp/: README.md  package-lock.json  package.json
frontend/weatherapp/src/: App.vue
weatherproject/weatherapp/: models.py  serializers.py  urls.py  utils.py  views.py
weatherproject/weatherapp/management/commands/: import_city.py
weatherproject/weatherproject/: settings.py  urls.py
weatherproject/weatherproject/utils/: owm_api.py
